student can check admission history matched his own application
