# routes/router.go
@@ -39,6 +39,7 @@ func InitRouter() {
 		auth.GET("user/list/mentor", v1.ListAllMentors)
 		auth.POST("student/application", v1.CreateApplication)
 		auth.GET("student/detail", v1.ListStudentsDetail)
+		auth.GET("student/admission/history", v1.ListMatchedAdmittedStudents)
 	}
 
 	//教师权限
